--- a/data/packages.yaml
+++ b/data/packages.yaml
@@ -9,7 +9,7 @@ aec5898e-b88c-11e6-ba85-95d1533d9a62:
   topper:
     # headline: null,
     standfirst: " "
-    backgroundColour: slate,
+    backgroundColour: slate
     layout: full-bleed-offset
     theme: full-bleed-offset # deprecated
     images: [] # deprecated
@@ -42,21 +42,32 @@ aec5898e-b88c-11e6-ba85-95d1533d9a62:
     - {id: 503fb2ec-b826-11e6-ba85-95d1533d9a62, title: Gardening} # Gardening
     - {id: 0447a2b4-b826-11e6-ba85-95d1533d9a62, title: Fashion} # Fashion
 
-# Xi's China
-85d5075e-f9ad-11e6-9516-2d969e0d3b65:
+# Doing business in Greece
+5c3cae78-dbef-11e6-9d7c-be108f1c1dce:
   design:
-    theme: extra
+    theme: special-report
   tableOfContents:
-    sequence: exact-order
-    labelType: part-number
+    sequence: none
+    labelType: none
     displayIntroduction: false
-  leadImages: []
+  leadImages:
+    - {ratio: 1, width: 2612, height: 2612, id: http://api.ft.com/content/b84610a0-fcf2-11e6-8d8e-a5e3738f9ae4, type: square}
+    - {ratio: 1.7777, width: 2048, height: 1152, id: http://api.ft.com/content/b9c980ba-fcf2-11e6-8d8e-a5e3738f9ae4, type: standard}
   description: >
-    Something about Xi's China
+    From airports to utilities, foreign investors are buying assets being
+    privatised by Alexis Tsipras’ leftwing government. While politicians
+    and creditors wrangle over the terms of Greece’s €86bn bailout, businesses
+    and entrepreneurs are adapting to new realities and opportunities
   contains:
-    - {id: 57371736-4b69-11e6-88c5-db83e98a590a} # The rise of party politics
-    - {id: dde0af68-4db2-11e6-88c5-db83e98a590a} # Command and control
-    - {id: ccd94b46-4db5-11e6-88c5-db83e98a590a} # Smothering dissent
+    - {id: e6d0cd70-b724-11e6-961e-a1acd97f622d}
+    - {id: 063f2d4e-b727-11e6-961e-a1acd97f622d}
+    - {id: ea01d1e2-b724-11e6-961e-a1acd97f622d}
+    - {id: 128303aa-b727-11e6-961e-a1acd97f622d}
+    - {id: 436b20f8-b725-11e6-961e-a1acd97f622d}
+    - {id: 04084f5e-b729-11e6-961e-a1acd97f622d}
+    - {id: ed349728-b724-11e6-961e-a1acd97f622d}
+    - {id: 0c1614a8-b727-11e6-961e-a1acd97f622d}
+    - {id: 08db5474-b727-11e6-961e-a1acd97f622d}
 
 # Women of the year 2016
 4ff0cb62-bc74-11e6-8b45-b8b81dd5d080:
@@ -90,75 +101,82 @@ aec5898e-b88c-11e6-ba85-95d1533d9a62:
     - {id : 713f2c00-bc10-11e6-8b45-b8b81dd5d080, title: Sushma Swaraj} # Sushma Swaraj
     - {id : 67883ebc-bc11-11e6-8b45-b8b81dd5d080, title: Kellyanne Conway} # Kellyanne Conway
 
-# Animals: a photography special
-79a65cf6-d33f-11e6-b06b-680c49b4b4c0:
-  title: "Brexit: in or out"
-  design:
-    theme: special-report
-  tableOfContents:
-    sequence: none
-    labelType: none
-    displayIntroduction: false
-  leadImages: []
-  description: >
-    Rescue dogs, Tokyo parakeets and more: a selection of photographs
-    that explore our relationship with animals
-  contains:
-    - {id: d4efba32-d2ca-11e6-b06b-680c49b4b4c0} # How pets keep the powerful grounded
-    - {id: c65793a0-d2ca-11e6-b06b-680c49b4b4c0} # Walter Chandoha, godfather of cat photography
-    - {id: 8f37f666-d203-11e6-b06b-680c49b4b4c0} # Snake charming: Clare Strand confronts her phobia
-    - {id: 8dba07fc-d203-11e6-b06b-680c49b4b4c0} # Ruth van Beek’s ‘Levitators’: a new breed of dog
-    - {id: d351de76-d2ca-11e6-b06b-680c49b4b4c0} # The disturbing story behind Hagenbeck’s circus
-    - {id: 853d15a4-c184-11e6-9bca-2b93a6856354} # Raymond Meeks and Adrianna Ault: at the animal shelter
-    - {id: 869c8c04-c184-11e6-9bca-2b93a6856354} # Yoshinori Mizutani: invasion of the parakeets
-    - {id: aeb23f84-d2ca-11e6-b06b-680c49b4b4c0} # Mad dogs and Instagram
-    - {id: 909b5f16-d203-11e6-b06b-680c49b4b4c0} # Gerrard Gethings’ farmyard animals
 
-# Doing business in Greece
-5c3cae78-dbef-11e6-9d7c-be108f1c1dce:
-  design:
-    theme: special-report
-  tableOfContents:
-    sequence: none
-    labelType: none
-    displayIntroduction: false
-  leadImages:
-    - {ratio: 1, width: 2612, height: 2612, id: http://api.ft.com/content/b84610a0-fcf2-11e6-8d8e-a5e3738f9ae4, type: square}
-    - {ratio: 1.7777, width: 2048, height: 1152, id: http://api.ft.com/content/b9c980ba-fcf2-11e6-8d8e-a5e3738f9ae4, type: standard}
-  description: >
-    From airports to utilities, foreign investors are buying assets being
-    privatised by Alexis Tsipras’ leftwing government. While politicians
-    and creditors wrangle over the terms of Greece’s €86bn bailout, businesses
-    and entrepreneurs are adapting to new realities and opportunities
-  contains:
-    - {id: e6d0cd70-b724-11e6-961e-a1acd97f622d}
-    - {id: 063f2d4e-b727-11e6-961e-a1acd97f622d}
-    - {id: ea01d1e2-b724-11e6-961e-a1acd97f622d}
-    - {id: 128303aa-b727-11e6-961e-a1acd97f622d}
-    - {id: 436b20f8-b725-11e6-961e-a1acd97f622d}
-    - {id: 04084f5e-b729-11e6-961e-a1acd97f622d}
-    - {id: ed349728-b724-11e6-961e-a1acd97f622d}
-    - {id: 0c1614a8-b727-11e6-961e-a1acd97f622d}
-    - {id: 08db5474-b727-11e6-961e-a1acd97f622d}
 
-# Brexit: In or out?
-5c8c7e2e-d715-11e5-829b-8564e7528e54: # This actually points to the Poll tracker at the moment
-  title: "Brexit: in or out"
+#The following packages already exist in methode, we just need to fill in contains
+# Xi's China
+8b4d2118-0e51-11e7-a88c-50ba212dce4d:
   design:
     theme: extra
   tableOfContents:
-    sequence: none
-    labelType: none
+    sequence: exact-order
+    labelType: part-number
     displayIntroduction: false
-  leadImages: []
-  description: >
-    The FT’s comprehensive guide to the vote on whether Britain
-    should stay in Europe
   contains:
-    - {id: 70d0bfd8-d1b3-11e5-831d-09f7778e7377, title: The economy} # What are the economic consequences of Brexit?
-    - {id: e90885d8-d3db-11e5-829b-8564e7528e54, title: The city} # What would Brexit mean for the City of London?
-    - {id: 807750a4-d984-11e5-98fd-06d75973fe09, title: null} # What the City stands to lose and gain from Brexit
-    - {id: 202a60c0-cfd8-11e5-831d-09f7778e7377, title: null} # What has the EU done for the UK?
-    - {id: 8710df70-d49d-11e5-8887-98e7feb46f27, title: Fraying Union} # Brexit: Fraying union
-    - {id: 6e5737f6-defa-11e5-b67f-a61732c1d025, title: Scotland} # Would Brexit lead to Scotland leaving the UK?
-    - {id: 5db877f2-d0a9-11e5-831d-09f7778e7377, title: null} # Brexit debate unnerves continent’s service workers in UK
+    - {id: 57371736-4b69-11e6-88c5-db83e98a590a} # The rise of party politics
+    - {id: dde0af68-4db2-11e6-88c5-db83e98a590a} # Command and control
+    - {id: ccd94b46-4db5-11e6-88c5-db83e98a590a} # Smothering dissent
+
+#Animals: a photography special
+8f37f666-d203-11e6-b06b-680c49b4b4c0:
+	contains:
+		- {id: 8f37f666-d203-11e6-b06b-680c49b4b4c0}
+		- {id: 8dba07fc-d203-11e6-b06b-680c49b4b4c0}
+		- {id: d351de76-d2ca-11e6-b06b-680c49b4b4c0}
+		- {id: 853d15a4-c184-11e6-9bca-2b93a6856354}
+		- {id: 869c8c04-c184-11e6-9bca-2b93a6856354}
+		- {id: 909b5f16-d203-11e6-b06b-680c49b4b4c0}
+
+#Brexit: in or out
+60547f1c-0e54-11e7-a88c-50ba212dce4d:
+	contains:
+		- {id: 70d0bfd8-d1b3-11e5-831d-09f7778e7377}
+		- {id: e90885d8-d3db-11e5-829b-8564e7528e54}
+		- {id: 807750a4-d984-11e5-98fd-06d75973fe09}
+		- {id: 202a60c0-cfd8-11e5-831d-09f7778e7377}
+		- {id: 8710df70-d49d-11e5-8887-98e7feb46f27}
+		- {id: 6e5737f6-defa-11e5-b67f-a61732c1d025}
+		- {id: 5db877f2-d0a9-11e5-831d-09f7778e7377}
+
+# Doing Business in Austria
+524fe874-0324-11e7-ace0-1ce02ef0def9:
+	contains:
+		- {id: e26d3c84-8bad-11e6-8cb7-e7ada1d123b1}
+		- {id: e9c1897c-8bad-11e6-8cb7-e7ada1d123b1}
+		- {id: ffa10ed8-8bea-11e6-8cb7-e7ada1d123b1}
+		- {id: e50b7280-8bad-11e6-8cb7-e7ada1d123b1}
+		- {id: fc68bb26-8bea-11e6-8cb7-e7ada1d123b1}
+		- {id: 02d79824-8beb-11e6-8cb7-e7ada1d123b1}
+		- {id: 04310fb6-9474-11e6-a1dc-bdf38d484582}
+		- {id: f1bd4d80-8baf-11e6-8cb7-e7ada1d123b1}
+		- {id: ed61e1a0-669a-11e5-97d0-1456a776a4f5}
+		- {id: ed75e196-669a-11e5-97d0-1456a776a4f5}
+		- {id: ed30c46c-669a-11e5-97d0-1456a776a4f5}
+		- {id: ecf6acdc-669a-11e5-97d0-1456a776a4f5}
+		- {id: ed4d1400-669a-11e5-97d0-1456a776a4f5}
+		- {id: ed8b5a4e-669a-11e5-97d0-1456a776a4f5}
+		- {id: ecd23bf4-669a-11e5-97d0-1456a776a4f5}
+
+#Age of the ETFs
+de4d756c-04be-11e7-ace0-1ce02ef0def9:
+	contains:
+	- {id: d4c21f40-c6dc-11e6-8f29-9445cac8966f}
+	- {id: fd12f22a-c692-11e6-9043-7e34c07b46ef}
+	- {id: 93d12dbc-bc8e-11e6-8b45-b8b81dd5d080}
+	- {id: aed91bfe-c64f-11e6-9043-7e34c07b46ef}
+	- {id: e47f1d6e-be46-11e6-8b45-b8b81dd5d080}
+	- {id: d26aae58-bbc2-11e6-8b45-b8b81dd5d080}
+	- {id: 7b8f11f4-c01e-11e6-9bca-2b93a6856354}
+	- {id: 692c982c-bd78-11e6-8b45-b8b81dd5d080}
+	- {id: 0f582a8c-bf21-11e6-81c2-f57d90f6741a}
+	- {id: f406d50c-bbcf-11e6-8b45-b8b81dd5d080}
+	- {id: 00a1c748-be1b-11e6-8b45-b8b81dd5d080}
+	- {id: 59739d3a-bd60-11e6-8b45-b8b81dd5d080}
+	- {id: 885b3eba-bc9c-11e6-8b45-b8b81dd5d080}
+	- {id: aa4e3be2-baff-11e6-8b45-b8b81dd5d080}
+	- {id: 12dcd476-bc4e-11e6-8b45-b8b81dd5d080}
+	- {id: 2962333e-baec-11e6-8b45-b8b81dd5d080}
+	- {id: cf8aecc0-badc-11e6-8b45-b8b81dd5d080}
+	- {id: cf69b382-bade-11e6-8b45-b8b81dd5d080}
+	- {id: a54e75d4-b7f9-11e6-ba85-95d1533d9a62}
+	- {id: df1d95ec-bac4-11e6-8b45-b8b81dd5d080}
