Make books of the year Extra theme

--- a/data/packages.yaml
+++ b/data/packages.yaml
@@ -1,7 +1,7 @@
 # Best books of 2017
 aec5898e-b88c-11e6-ba85-95d1533d9a62:
   design:
-    theme: basic
+    theme: extra
   tableOfContents:
     sequence: none
     labelType: none
