Set Books of the year back to basic

--- a/data/packages.yaml
+++ b/data/packages.yaml
@@ -2,7 +2,7 @@
 aec5898e-b88c-11e6-ba85-95d1533d9a62:
   bodyHTML: ""
   design:
-    theme: extra
+    theme: basic
   tableOfContents:
     sequence: none
     labelType: none
